fixed empty operator selection can cause stack overflow

--- a/src/app.mod.scss
+++ b/src/app.mod.scss
@@ -1,6 +1,12 @@
 @import "globals";
 
 :global {
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+
 	body {
 		background: $background;
 		color: $text;
